--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Short stories, Canadian'
 - !lcsh 'Canadian fiction'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: The vagrants of the barren -- Macphairrson's happy family -- On Big
   Lonely -- From buck to bear and back -- In the deep of the snow -- The gentling
   of Red McWha -- Melindy and the lynxes -- Mrs. Gammit's pig -- The blackwater pot
